# multi-agent-system

./: .env.sample  .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  Procfile  README.md  SECURITY.md  app.py  index.html  mkdocs.yml  pyproject.toml  quickstart.html  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_tool.txt  runtime.txt  sitemap.xml  tags.html
.github/workflows/: deploy_docs.yml  publish.yml  publish_test_pypi.yml  publish_testpypi.yml  python-publish.yml  run_test.yml  run_tests.yml  security_check.yml  tests.yml  uv_publish_testpypi.yml
core/: knowledge.html  memory.html  rag-tool.html  tool.html
core/agent/: config.html  index.html  task-handling.html
core/agent-network/: config.html  form.html  index.html  ref.html
core/agent-network/config/: index.html
core/agent-network/form/: index.html
core/agent-network/ref/: index.html
core/agent/config/: index.html
core/agent/ref/: index.html
core/agent/task-handling/: index.html
core/knowledge/: index.html
core/llm/: index.html
core/memory/: index.html
core/network/: index.html
core/rag-tool/: index.html
core/task/: evaluation.html  index.html  reference.html  response-field.html  task-execution.html  task-output.html  task-strc-response.html
core/task-graph/: index.html
core/task/evaluation/: index.html
core/task/reference/: index.html
core/task/response-field/: index.html
core/task/task-execution/: index.html
core/task/task-output/: index.html
core/task/task-ref/: index.html
core/task/task-strc-response/: index.html
core/tool/: index.html
docs/: index.md  quickstart.md  tags.md
docs/core/: Agent.md  knowledge.md  memory.md  rag-tool.md  task-graph.md  task.md  tool.md
docs/core/agent/: config.md  index.md  ref.md  task-handling.md
docs/core/agent-network/: config.md  form.md  index.md  ref.md  task-handling.md
docs/core/llm/: index.md
docs/core/task/: evaluation.md  index.md  reference.md  response-field.md  task-execution.md  task-output.md  task-ref.md  task-strc-response.md
docs/core/task-graph/: index.md
docs/stylesheets/: main.css
framework/: __init__.py
framework/_cli/: test_cli.py
framework/_utils/: rpm_controller.py  usage_metrics.py
framework/agent/: model.py  parser.py
framework/clients/customer/: model.py
framework/clients/product/: model.py
framework/clients/workflow/: model.py
framework/llm/: llm_vars.py  model.py
framework/task/: formatter.py  model.py
framework/team/: model.py  team_planner.py
framework/tool/: decorator.py  model.py  tool_handler.py
quickstart/: index.html
sample/demo/: agents.py  project.py  tasks.py
sample/demo/Prompts/: Demo.py
search/: search_index.json
src/: __init__.py  app.py  preprocess.py
src/components/_cli/: main.py
src/components/_utils/: cache_handler.py  i18n.py  logger.py  process_config.py  rpm_controller.py  usage_metrics.py
src/components/agent/: model.py  parser.py
src/components/llm/: llm_vars.py  model.py
src/components/task/: __init__.py  formatter.py  model.py
src/components/team/: model.py  team_planner.py
src/components/tool/: decorator.py  model.py  tool_handler.py
src/versionhq/: __init__.py
src/versionhq/_prompt/: auto_feedback.py  constants.py  model.py
src/versionhq/_utils/: __init__.py  cache_handler.py  convert_img_url.py  handle_directory.py  is_valid_enum.py  is_valid_url.py  llm_as_a_judge.py  logger.py  process_config.py  rpm_controller.py  usage_metrics.py  vars.py
src/versionhq/agent/: default_agents.py  inhouse_agents.py  model.py  parser.py  rpm_controller.py
src/versionhq/agent/TEMPLATES/: Backstory.py
src/versionhq/agent_network/: formation.py  model.py
src/versionhq/clients/customer/: __init__.py  model.py
src/versionhq/clients/product/: model.py
src/versionhq/clients/workflow/: model.py
src/versionhq/graph/: model.py
src/versionhq/knowledge/: __init__.py  _utils.py  embedding.py  model.py  source.py  source_docling.py  storage.py
src/versionhq/llm/: llm_variables.py  llm_vars.py  model.py
src/versionhq/memory/: contextual_memory.py  model.py
src/versionhq/network/: model.py
src/versionhq/storage/: base.py  ltm_sqlite_storage.py  mem0_storage.py  rag_storage.py  task_output_storage.py  utils.py
src/versionhq/task/: __init__.py  evaluate.py  evaluation.py  formation.py  formatter.py  log_handler.py  model.py  structured_response.py
src/versionhq/task/TEMPLATES/: Description.py
src/versionhq/task_graph/: colors.py  draft.py  model.py
src/versionhq/team/: model.py  team_planner.py
src/versionhq/tool/: __init__.py  cache_handler.py  composio.py  composio_tool.py  decorator.py  model.py  rag_tool.py  tool_handler.py
src/versionhq/tool/composio/: model.py  params.py
src/versionhq/tool/gpt/: __init__.py  _enum.py  cua.py  cup.py  file_search.py  web_search.py
stylesheets/: main.css
tags/: index.html
tests/: __init__.py  conftest.py  doc_test.py  formation_test.py  usecase_test.py
tests/_prompt/: auto_feedback_test.py  prompt_test.py
tests/_sample/: sample.csv  sample.json
tests/agent/: agent_build_test.py  agent_test.py  doc_test.py
tests/agent_network/: agent_network_test.py  doc_test.py
tests/clients/: customer_test.py  product_test.py  workflow_test.py
tests/graph/: graph_test.py
tests/knowledge/: knowledge_test.py
tests/llm/: llm_connection_test.py  llm_test.py
tests/memory/: memory_test.py
tests/network/: doc_test.py  network_test.py
tests/task/: __init__.py  doc_eval_test.py  doc_taskoutput_test.py  doc_test.py  eval_test.py  llm_connection_test.py  sync_test.py  task_test.py
tests/task_graph/: doc_test.py  task_graph_test.py
tests/team/: kickoff_test.py  team_test.py
tests/team/Prompts/: Demo_test.py
tests/tool/: composio_test.py  doc_test.py  gpt_test.py  playwright_test.py  rag_tool_test.py  tool_test.py
