[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "versionhq.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["test*", "__pycache__", "*.egg-info"]

[project]
name = "versionhq"
version = "1.1.11.1"
authors = [{ name = "Kuriko Iwai", email = "kuriko@versi0n.io" }]
description = "LLM orchestration frameworks for model-agnostic AI agents that handle complex outbound workflows"
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
keywords = ["orchestration framework", "orchestration", "ai agent", "multi-agent system", "RAG", "agent"]
dependencies = [
  "regex==2024.11.6",
  "requests>=2.32.3",
  "pydantic>=2.10.6",
  "werkzeug>=3.1.3",
  "typing>=3.10.0.0",
  "json-repair>=0.31.0",
  "litellm>=1.55.8",
  "openai>=1.57.0",
  "composio-openai>=0.6.9",
  "composio>=0.1.0",
  "setuptools>=75.6.0",
  "wheel>=0.45.1",
  "python-dotenv>=1.0.0",
  "appdirs>=1.4.4",
  "langchain>=0.3.14",
  "langchain-openai>=0.2.14",
  "composio-langchain>=0.6.12",
  "chromadb>=0.6.3",
  "json-repair>=0.35.0",
  "wheel>=0.45.1",
]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://versi0n.io"
Documentation = "https://chief-oxygen-8a2.notion.site/Documentation-17e923685cf98001a5fad5c4b2acd79b?pvs=73"
Repository = "https://github.com/versionHQ/multi-agent-system"
Issues = "https://github.com/versionHQ/multi-agent-system/issues"

[project.optional-dependencies]
docling = [
    "docling>=2.17.0",
]
mem0ai = [
    "mem0ai>=0.1.48",
]
pdfplumber = [
    "pdfplumber>=0.11.5",
]
pandas = [
    "pandas>=2.2.3",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.10.0",
  "pre-commit>=4.0.1",
  "pytest>=8.0.0",
  "pytest-vcr>=1.0.2",
  "black",
  "bandit",
  "twine",
  "pytest>=8.3.4",
]

[tool.uv.workspace]
members = ["krik8235"]

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [""]


[tool.pytest.ini_options]
filterwarnings = "ignore"
minversion = "8.0"
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
