[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "versionhq.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["test*", "__pycache__", "*.egg-info"]

[project]
name = "versionhq"
version = "1.2.1.19"
authors = [{ name = "Kuriko Iwai", email = "kuriko@versi0n.io" }]
description = "An agentic orchestration framework for building agent networks that handle task automation."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
keywords = ["orchestration framework", "orchestration", "ai agent", "multi-agent system", "RAG", "agent", "agentic orchestration", "llm"]
dependencies = [
  "regex==2024.11.6",
  "requests>=2.32.3",
  "pydantic>=2.10.6",
  "werkzeug>=3.1.3",
  "typing",
  "json-repair",
  "litellm>=1.55.8",
  "openai>=1.57.0",
  "composio-openai>=0.6.9",
  "composio>=0.1.0",
  "setuptools>=75.6.0",
  "wheel>=0.45.1",
  "python-dotenv>=1.0.0",
  "appdirs>=1.4.4",
  "langchain>=0.3.14",
  "langchain-openai>=0.2.14",
  "composio-langchain>=0.6.12",
  "chromadb>=0.6.3",
  "wheel>=0.45.1",
  "envoy>=0.0.3",
  "composio-core==0.7.0",
  "networkx>=3.4.2",
  "matplotlib>=3.10.0",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://versi0n.io"
Documentation = "https://docs.versi0n.io"
Repository = "https://github.com/versionHQ/multi-agent-system"
Issues = "https://github.com/versionHQ/multi-agent-system/issues"

[project.optional-dependencies]
docling = [
    "docling>=2.17.0",
]
mem0ai = [
    "mem0ai>=0.1.48",
]
pdfplumber = [
    "pdfplumber>=0.11.5",
]
pandas = [
    "pandas>=2.2.3",
]
numpy = [
    "numpy>=1.26.4",
]
pygraphviz = [
    "pygraphviz>=1.14",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.10.0",
  "pre-commit>=4.0.1",
  "pytest-vcr>=1.0.2",
  "black",
  "bandit",
  "pytest>=8.3.4",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.2",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocstrings-python>=1.14.5",
  "mkdocstrings>=0.28.0",
  "pillow>=10.4.0",
]

[tool.uv.workspace]
members = ["Kuriko", "krik8235", "Kuriko IWAI"]

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [""]


[tool.pytest.ini_options]
filterwarnings = "ignore"
minversion = "8.0"
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
