[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "versionhq.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["test*", "__pycache__", "*.egg-info"]

[project]
name = "versionhq"
version = "1.2.4.1"
authors = [{ name = "Kuriko Iwai", email = "kuriko@versi0n.io" }]
description = "A Python framework for autonomous agent networks that handle task automation with multi-step reasoning."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["orchestration framework", "orchestration", "ai agent", "multi-agent system", "RAG", "agent", "agentic orchestration", "llm"]
dependencies = [
  "regex==2024.11.6",
  "requests>=2.32.3",
  "pydantic>=2.10.6",
  "werkzeug>=3.1.3",
  "typing>=0.0.0",
  "json-repair>=0.0.0",
  "litellm>=1.55.8",
  "openai>=1.64.0",
  "composio-openai>=0.6.9",
  "composio>=0.1.0",
  "setuptools>=75.6.0",
  "wheel>=0.45.1",
  "python-dotenv>=1.0.0",
  "appdirs>=1.4.4",
  "langchain>=0.3.14",
  "langchain-openai>=0.2.14",
  "composio-langchain>=0.6.12",
  "chromadb>=0.6.3",
  "wheel>=0.45.1",
  "envoy>=0.0.3",
  "composio-core==0.7.0",
  "networkx>=3.4.2",
  "matplotlib>=3.10.0",
  "boto3>=1.37.1",
  "scikit-learn>=1.6.1",
  "numpy>=1.26.4",
  "pandas>=2.2.3",
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Build Tools"
]

[project.urls]
Homepage = "https://versi0n.io"
Documentation = "https://docs.versi0n.io"
Repository = "https://github.com/versionHQ/multi-agent-system"
Issues = "https://github.com/versionHQ/multi-agent-system/issues"

[project.optional-dependencies]
docling = [
    "docling>=2.25.2",
]
mem0ai = [
    "mem0ai>=0.1.55",
]
pdfplumber = [
    "pdfplumber>=0.11.5",
]
pygraphviz = [
    "pygraphviz>=1.14",
]
tools = [
    "html2text>=2024.2.26",
    "sec-api>=1.0.28",
]
torch = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv]
dev-dependencies = [
  "mypy>=1.10.0",
  "pre-commit>=4.0.1",
  "pytest-vcr>=1.0.2",
  "black>=0.0.0",
  "bandit>=0.0.0",
  "pytest>=8.3.4",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.2",
  "mkdocs-material-extensions>=1.3.1",
  "mkdocstrings-python>=1.14.5",
  "mkdocstrings>=0.28.0",
  "pillow>=10.4.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "torch", marker = "sys_platform != 'win32' and sys_platform != 'linux'" },
  { index = "pytorch-cu124", extra = "torch", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "torch",  marker = "sys_platform != 'win32' and sys_platform != 'linux'" },
  { index = "pytorch-cu124", extra = "torch", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.workspace]
members = ["Kuriko", "krik8235", "Kuriko IWAI"]

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [""]


[tool.pytest.ini_options]
filterwarnings = "ignore"
minversion = "8.0"
addopts = "-v -ra -q"
log_cli = true
log_cli_level = "INFO"
